  Bugfixes:
    - Ignore ghost entitites that are marked as non-selectable. Fixes phantom ghosts when used with Tapeline mod. Permanent tapelines would leave "phantom" ghosts otherwise.
    - Do not auto-approve ghosts when using selection tools that place entities that are not selectable in the game. Those are usually used for special purposes by mods that build them. Fixes issues with selection tool from Tapeline mod approving the ghosts when dragged over them.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2021-10-17
  Features:
    - Construction planner tool now has a hotkey (default Alt + C)
    - Auto-approval mod setting now has a toolbar shortcut and a hotkey (default Shift + Alt + C)
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2021-10-09
  Bugfixes:
    - Fixed an issue with copying/blueprinting of ghost circuit connection data
    - Fixed a compatibility issue between this mod and the Creative Mod instant blueprint feature
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2021-10-05
  Bugfixes:
    - Fixed a crash introduced by the previous version
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2021-10-04
  Bugfixes:
    - Hand-placing assemblers, etc. on top of unapproved ghosts will now preserve the ghost recipe, same as vanilla ghosts
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2021-10-02
  Bugfixes:
    - Ghosts from destroyed entities are now ignored by the approval tool (they will be rebuilt without approval)
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2021-10-01
  Other:
    - First mod release!